# fastapi-prod-template

./: Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml
