[tool.poetry]
name = "fastapi-template"
version = "0.2.0"
description = "A template for kickstarting new FastAPI projects"
authors = ["VitahA"]
readme = "README.md"
license = "UNLICENSED"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.0"
asyncpg = "^0.30.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sentry-sdk = "^2.22.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"
python-json-logger = "^3.2.1"
prometheus-client = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
